Fixes z-index of nav dropdown

--- a/src/components/navigation/navMobile.module.css
+++ b/src/components/navigation/navMobile.module.css
@@ -1,5 +1,6 @@
 .navMobile {
   position: realtive;
+  z-index: 1;
 }
 
 .navMobile__dropdown {
